--- a/TODO.txt
+++ b/TODO.txt
@@ -1,41 +1,18 @@
 
-  "TOMORROW"
-    * make sure that user has permissions to access the workspace when returning WS configuration after reset
-    * In hotCoreStoreConfig, make sure that pageElementsPerPage uses workspaceId only if multiHome is enabled
+  CODE CHECK:
+  * Add "remove on fetch" for cursor-based queries (mongoDriver)
+  * Add extrapolateAndPrepare in _makeQuery (JsonRestStores)
 
-  MONGO:
-    Add mass deletion in API
-    Add range fields (from schema?)
-    Add cursor (with delete option) in API
-
-  COMET:
-    hotCoreComet:
-      * Mass Deletion of tab messages when tab gets deleted
-      * Mass deletion of tab messages when tab expires (cron job too?)
-      * See if/when using cursors makes sense
-
-  3-5 DAYS:
-  ----
-  * Make Comet messenging work again using JsonRestStores API only (it's currently completely broken)
-    ./hotCoreCometMessages/lib/hotCoreCometMessages.js <--- Check store permissions
-    * STORES: Add ability to filter for ranges as part of the JsonRestStore if necessary. YES do this one, it's necessary. Make it work
-              from URLs as well with searchSchema specific fields
-    * STORES: Add ability to scan through GetQuery by calling a function rather than returning an Array
-    * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
-      "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
-
-
-  NOTE: Summary of things to be added to JsonRestStores:
   * Ability to have a default "order" field, which will be influenced by "placeBefore" in options
-  * Ability to have range fields
-  * Ability to have getQuery that returns a function rather than an array
-  This will be enough for the messaging infrastructure, as well as the Comet infrastructure
 
+  * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
+    "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
 
+  AND THEN REWRITE!
+    Rewrite Hotplate, so that it doesn't have dependencies anymore, it uses enhanced EventEmitter
+    Rewrite the Dojo side, so that it loads module in a much more dojo-style way
 
-  REWRITE:
-    AND THEN! Rewrite Hotplate, so that it doesn't have dependencies anymore, it uses enhanced EventEmitter
-    AND THEN! Rewrite the Dojo side, so that it loads module in a much more dojo-style way
+    Rewrite hotplate.get to make it object/save to get rid of a few (a lot of) typeof() === undefined
 
   ------------------------------------------------
 
@@ -403,6 +380,14 @@
       * [DONE] Change messages so that storeTarget is out of the equation, with store(storeName) returning all stores in cache
       * [DONE] Rewrite backend so that it figures out, based on IDs, if a store is a list of is a 1-record gig
       * [DONE] Rewrite Dojo-side so that it places things into the cache accordingly
-
-
-
+  * make sure that user has permissions to access the workspace when returning WS configuration after reset
+  * In hotCoreStoreConfig, make sure that pageElementsPerPage uses workspaceId only if multiHome is enabled
+  * MONGO: Add range fields (from schema?)
+  * MONGO: Add mass deletion in API
+  * COMET: Mass Deletion of tab messages when tab gets deleted
+  * COMET: Mass Deletion of tab messages when tab expires (cron job too?)
+  * Restructured the whole Comet architecture so that it's all neat and nice to look at.
+  * Checked permissions for   hotCoreCometMessages/lib/hotCoreCometMessages.js
+  * Made Comet messenging work again 100% using JsonRestStores API only
+  * MONGO: Add cursor (with delete option) in API
+  * COMET:  See if/when using cursors makes sense
