--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@
   * Rewrite Hotplate, so that it doesn't have dependencies anymore, it uses enhanced EventEmitter
   * Rewrite the Dojo side, so that it loads module in a much more dojo-style way
   * Rewrite hotplate.get to make it object/save to get rid of a few (a lot of) typeof() === undefined
+  * Use "cachable" function for cachable hooks
 
   ------------------------------------------------
 
@@ -35,16 +36,19 @@
     * With "refreshData", change "refresh" to clickable overlay 
     * catch dgrid errors with overlay if necessary
 
-  * Document JsonRestStores and SimpleSchema better: add cursor queries, massdelete, massupdate, and what options do exactly
-    and MAYBE force the query to do a normal CastAndParams (rather than deleting search)
+  * For JsonRestStores, MAYBE force the query to do a normal castAndParams (rather than deleting search) and separate the
+    cast function from the other one (they got bundled) for code clarity
+
 
   --------------------------
   DEADLINE: 30th October 2013
   --------------------------
 
-  **************************************************************************************************************************
-  Note: at this point, I can create a store server-side in 2 minutes, _and_ a view/editing system client-side in 10 minutes.
-  **************************************************************************************************************************
+  *** Note: at this point, I can create a store server-side in 2 minutes, _and_ a view/editing system client-side in 10 minutes.
+
+  ***************************
+  * DOCUMENT THE ABSOLUTE LOT
+  ***************************
 
   "THE MISSING PIECES"
 
