--- a/TODO.txt
+++ b/TODO.txt
@@ -1,54 +1,45 @@
 
-  1 WEEK
-  ------
+  MAJOR HOTPLATE CLEANUP
+  ----------------------
 
   * Check that all the hooks that should be cached are actually cached grep -i hotEvents.on `find . -type f`
-
-  * Rewrite hotplate.get to make it object/save to get rid of a few (a lot of) typeof() === undefined, put defaults into modules
-  * Add a hook where modules do their initial configuration, so that server.js looks tiny and very close to the original Express server file 
-
   * Rewrite the Dojo side, so that it loads module in a much more dojo-style way
+
+  SMALL THINGS:
+  -------------
   * See what to do w/ shared code/validators: possibly create another global "Validators" array with just the Validators func (what about dups?)
 
-  ------------------------------------------------
+  * Make the driver mixin as a POSSIBLE mixin, configure it via Hotplate.
 
-  1 DAY
-  -----
+  * For JsonRestStores, MAYBE force the query to do a normal castAndParams (rather than deleting search) and separate the
+    cast function from the other one (they got bundled) for code clarity
+
+  * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
+    "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
+    http://dojo-toolkit.33424.n3.nabble.com/Problem-with-aspect-around-store-methods-td3999790.html
+
+
+  VISIBLE STUFF:
+  --------------
   * Add a "new contact" form, and a contacts browser/editor. Add ability to type messages underneath contacts. (30 mins and 200 lines of code?)
     Make sure you have "contact type" in the list of configurations
-
-  2 DAYS
-  ------
+ 
   * Fix DnD in stores, so that placement is kept (see nabble thread about it)
     * Ability to have a default "order" field, which will be influenced by "placeBefore" in options (db will auto-populate it)
     * Add "placeBefore" header to JsonRestStores calls
     * Check that placeBefore is passed on and considered by Observer
     * Make sure you can DnD freely between two boxes
 
-  1 DAY
-  -----
-  * Improve the look of widgets: Overlay with reload icon, top bar with shade, welcome and pick, etc.
-  * Check: http://dojo-toolkit.33424.n3.nabble.com/Question-on-CSS-with-widgets-td3995316.html
-
-
-  * Check hotDojoCometMessages/client/messages.js and hotDojoStores/client/AppStoreNotify.js: "add" needs to check if it's not within
-    "add" like it happens in Observer.js (check if the Observer.js way is indeed sane)
-    http://dojo-toolkit.33424.n3.nabble.com/Problem-with-aspect-around-store-methods-td3999790.html
- 
-
-  Improve StoreSelect and EditableList:
+  * Improve StoreSelect and EditableList:
     * With "refreshData", change "refresh" to clickable overlay 
     * catch dgrid errors with overlay if necessary
 
-  * For JsonRestStores, MAYBE force the query to do a normal castAndParams (rather than deleting search) and separate the
-    cast function from the other one (they got bundled) for code clarity
-
+  * Improve the look of the app and widgets: Overlay with reload icon, top bar with shade, welcome and pick, etc.
+  * Check: http://dojo-toolkit.33424.n3.nabble.com/Question-on-CSS-with-widgets-td3995316.html
 
   --------------------------
-  DEADLINE: 30th October 2013
+  DEADLINE: 30th November 2013
   --------------------------
-
-  *** Note: at this point, I can create a store server-side in 2 minutes, _and_ a view/editing system client-side in 10 minutes.
 
   ***************************
   * DOCUMENT THE ABSOLUTE LOT
@@ -64,6 +55,8 @@
   * Integrate message-sending with the current simple comment infrastructure (!). user picks if it's an SMS or if it's an email.
     The sending/editing widget will have to change accordingly (SMSes are given less space, no subject)
 
+  * Develop the "booking inbox" for incoming emails/SMSes
+
   User management and invites in Hotplate:
 
   * Write an "invite user" mechanism where users can be invited into the system (they receive an email, will redirect to a screen
@@ -72,18 +65,15 @@
     normal welcome page 2) Adding a hook to register and login, so that if that session variable is set, the created user will be
     added to that workspace (UsersWorkspaces store)
 
-
   * Add a "user management" section in settings for Admins only
   * Write a "message browser" for the workspace admin so that they can see exactly what was sent, when, and see the logs
   * Write a "log browser" for workspace owners and for ME to see what happened, with filters
 
   * Make an "booking": an abstract entity with a name and a bunch of people attached. When an email comes in, match it to a booking
 
-  * Develop the "booking inbox" for incoming emails/SMSes, match them against a booking
-
 
   ------------------------------
-  DEADLINE: 30th November 2013
+  DEADLINE: 30th December 2013
   ------------------------------
 
                           ----------------------------
@@ -95,14 +85,14 @@
 
   PHASE 1: Information
   * Ability to set "presence types" (dancer, security, paying guest) -- presentational only
-  * Ability to set products for each contact (once|minute|hour|day rate, commission-only allowed, restrict who can buy/offer it,
-    money range: from/to booking owner, from/to person, tangible/intangible, tax rate, that's it )
-  * Ability to create bookings. For each person added, [ product, quantity, $ from/to booking owner, $ from/to person, from time, to time]
+  * Ability to set products for each contact:
+    product, money lines: [ booking owner | line owner | office ] OWES (min, max) [  booking owner | line owner | office ] /unit or /timeUnit
+  * Ability to create bookings. For each person added, [ product, quantity OR from/to times, accounting entries ]
   * Ability to set templates for messages of different types, with previews
 
   PHASE 2: Money/billing
   * Accounting entries for products for each booking (with system-calculated ones)
-  * Interface with payment system
+  * Interface with payment system (Paypal?)
   * Ability to send invoices and _store_ received invoices
 
 
@@ -415,3 +405,4 @@
   * Check that everything actually works
   * Get rid of all the registration functions in hotplate, which are now obsolete
   * Move AsyncCollectEvents to its own github module
+  * Rewrite hotplate.get to make it object/save to get rid of a few (a lot of) typeof() === undefined, put defaults into modules
